shared/styles/custom-element.scss
/* ... */
custom-table[header-dark] {
    cdk-header-row {
        background: #263238 !important;
        color: #fff;
        [cdk-header-cell] {
            background: none;
        }
    }
}

#placeos {
    .cdk-overlay-pane {
        max-width: none !important;
    }

    .svg-viewer__label {
        top: -200%;
        left: -200%;
        line-height: 1.1;
    }
    
    .mat-datepicker-toggle {
        button {
            position: relative;
            margin-top: -1rem;
            top: 0.25rem;
        }
    }

    mat-slide-toggle {
        .mat-slide-toggle-bar {
            height: 24px;
            border-radius: 12px;
        }
    
        .mat-slide-toggle-thumb-container {
            top: 2px;
            left: 2px;
        }
    
        &.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb-container {
            transform: translate3d(12px, 0, 0);
        }
    }

    mat-pseudo-checkbox.mat-pseudo-checkbox-checked {
        background: var(--primary);
    }

    .mat-checkbox-inner-container {
        margin-left: 8px;
    }
    .mat-checkbox-checked .mat-checkbox-background {
        background-color: var(--primary);
    }

    .mat-checkbox-label {
        font-weight: normal;
    }

    .mat-radio-checked {
        .mat-radio-outer-circle {
            border-color: var(--primary);
        }
        .mat-radio-inner-circle {
            background-color: var(--primary);
        }
    }

    .mat-ink-bar {
        background-color: var(--primary);
    }

    mat-chip {
        &[color='internal'] {
            color: var(--font-light);
            background-color: var(--primary);
        }
        &[color='external'] {
            color: var(--font-light);
            background-color: var(--pending);
        }
    }

    .mat-button-toggle {
        background: inherit;
        color: currentColor;
    }

    mat-bottom-sheet-container {
        padding: 0;
    }
    
    .dark,
    [dark] {
        mat-tab-group {
            .mat-tab-label-container {
                @apply bg-gray-900;
            }
            .mat-tab-label-content {
                @apply text-white;
            }
        }
    
        nav {
            .mat-tab-links {
                @apply bg-gray-900;
            }
            .mat-tab-link {
                @apply text-white;
            }
        }
    
        .mat-select-value-text,
        .mat-select-arrow {
            color: #fff;
        }    
    
        .mat-form-field-outline > div {
            color: #fff8;
        }
    
        .mat-form-field {
            ::placeholder,
            .mat-select-placeholder {
                color: #fff8;
            }
        }
    
        button.mat-button,
        a[button] {
            color: #fff;
            
            &.inverse {
                background: none;
                --color: #fffa;
            }
    
            &.error {
                --color: var(--error)
            }
    
            &[disabled] {
                opacity: 0.3;
            }
        }
    
        .mat-slide-toggle-bar {
            background-color: rgba(255,255,255, 0.2);
        }
    
        .mat-checked .mat-slide-toggle-bar {
            background-color: rgba(255,255,255, 0.4);
        }

        .mat-menu-item {
            color: inherit;
            &:hover {
                background-color: #fff2;
            }
        }

        custom-table[asset-requests] {
            cdk-row {
                background: none;
                [cdk-cell]:not(:first-child) {
                    border-left: 1px solid #737373;
                }
            }
        }
        mat-dialog-container {
            background-color: #404040;
            color: #fff;

        }

        mat-bottom-sheet-container {
            background-color: #404040;
            color: #fff;

        }

        .mat-paginator {
            background-color: inherit;
            color: inherit;
        }


        .mat-spinner {
            circle {
                stroke: var(--secondary);
            }
        }

        mat-pseudo-checkbox.mat-pseudo-checkbox-checked {
            background: var(--secondary);
        }
        
        .mat-checkbox-checkmark {
            fill: #000A;
        }
        .mat-checkbox-checked {
            .mat-checkbox-background {
                background-color: #fff;
            }
        
            .mat-checkbox-mixedmark {
                background-color: #000A;
            }
    
            .mat-checkbox-checkmark-path {
                stroke: #000A !important;
            }
        }

        .mat-checkbox-frame {
            border-color: #fff6
        }

        .mat-radio-outer-circle {
            border-color: #fff4;
        }

        .mat-radio-checked {
            .mat-radio-outer-circle {
                border-color: #fff;
            }
            .mat-radio-inner-circle {
                background-color: #fff;
            }
        }

        .mat-autocomplete-panel {
            @apply bg-neutral-700;
        }

        .mat-ink-bar {
            background-color: #fff;
        }

        .ql-toolbar {
            .ql-stroke {
                stroke: #eee;
            }
            .ql-picker-label::before {
                color: #fff;
            }
        }
        .ql-blank::before {
            color: #fff8;
        }

        .mat-menu-panel,
        .mat-select-panel  {
            @apply bg-neutral-800;
        }

        .mat-option-text {
            @apply text-white;
        }

        mat-option.mat-active {
            @apply bg-white/5;
         }

       .mat-active .mat-option-text {
            @apply text-blue-500;
        }

        .mat-option:hover {
            @apply bg-white/10;
        }
    
        bootstrap,
        [app-bootstrap] {
            @apply bg-neutral-600;
        }
    }
}
/* ... */

